# tunnel-defect-toolkit

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  testpypi.yml
configs/: codebrim.yaml  example_data.yaml  labelme_template.yaml  rdd2022.yaml  tongji.yaml  tongji_flat.yaml  toy.yaml
data/raw/: README.md
docs/: artifact_schema.md  cli_reference.md  index.md  release_checklist.md  roadmap.md  v1_scope.md
examples/: README.md
examples/example_data/: DATA_LICENSE.md  README.md  selection_manifest.csv
examples/example_data/annotations/: C0041.json  C0080.json  C0111.json  C0112.json  C0119.json  EF0012.json  EL0009.json  ES0015.json  ES0019.json  F0010.json  F0013.json  KL0067.json  L0094.json  L0115.json  L0117.json  L0154.json  L0163.json  L0242.json  S0047.json  S0052.json
examples/toy_dataset/images/: tunnel_001.ppm
examples/toy_dataset/masks/: tunnel_001.pgm
tdt/: __init__.py
tdt/analysis/: cooccurrence.py  distribution.py  morphology.py  morphology_table.py  quality.py  resolution.py
tdt/cli/: main.py
tdt/datasets/: __init__.py  converters.py  manifest.py  registry.py  schema.py  split.py  validation.py
tdt/evaluation/: __init__.py  calibration.py  confusion.py  metrics.py  significance.py  structure.py
tdt/inference/: __init__.py  profiling.py  tiled_inference.py
tdt/preprocessing/: __init__.py  augmentation.py  balancing.py  stitching.py  tile_dataset.py  tiling.py
tdt/reporting/: __init__.py  dataset_report.py  evaluation_report.py  html.py  schemas.py
tdt/utils/: __init__.py  geometry.py  io.py  logging.py  masks.py  progress.py
tdt/visualization/: __init__.py  dashboards.py  failure.py  morphology_plots.py  overlay.py  overlay_batch.py
tests/: check_distribution.py  test_converters.py  test_dataset_workflow.py  test_metrics.py  test_morphology.py  test_reporting_validation.py  test_tiling.py  test_visualization.py
