[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunnel-defect-toolkit"
version = "0.1.0"
description = "Model-agnostic toolkit for tunnel defect dataset analysis, preprocessing, visualization, and reporting."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Mohan Ren" }
]
maintainers = [
  { name = "Mohan Ren" }
]
keywords = [
  "tunnel defects",
  "semantic segmentation",
  "dataset analysis",
  "morphology",
  "structural health monitoring"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "pillow>=9.0",
  "pyyaml>=6.0",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "scikit-image>=0.20",
  "scipy>=1.9",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
  "mypy>=1.8"
]

[project.scripts]
tdt = "tdt.cli.main:main"

[project.urls]
Homepage = "https://github.com/MorganREN/tunnel-defect-toolkit"
Repository = "https://github.com/MorganREN/tunnel-defect-toolkit"
Issues = "https://github.com/MorganREN/tunnel-defect-toolkit/issues"

[tool.setuptools.packages.find]
include = ["tdt*"]

[tool.setuptools.package-data]
tdt = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
